@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05b: *********************************
 
+INP: (10/25/06, DN) RTree is not fresh after creating new arc (Bug #1252).
+FIX: Call unfreshRTree after arc changes. Rollback lazy RTree creation for now.
+
 IMP: (10/25/06, RK) Non-functional layout generator project settings tab.
 
 IMP: (10/25/06, DN) Layer.Function is enum. Layer.Function.Set is implemented and used in
